main.css
*       {margin: 0%; box-sizing: border-box; position: relative; vertical-align: middle;}

/* Header */

.header {
    background: url(images/bg2.jpg) center center no-repeat fixed;
    background-size: cover;
}

.headLine {
    animation: showHeadLine 2s;
    animation-delay: 1s;
    animation-fill-mode: backwards;
}

.subHeadLine {
    animation: showSubHeadLine 2.5s;
    animation-delay: 1s;
    animation-fill-mode: backwards;
}

/*Text Styles*/

.center {
    text-align: center;
}

h1, h2, h3 {
    font-family: 'Lato', sans-serif; 
    line-height: 1.1;
}

h2 {
    color: black;
    font-weight: 300;
    font-size: 2rem;
    margin: 1rem 0 1.5rem;
}

h1 {
    z-index: 2;
    margin: 0 0 1rem;
    width: 100%;
    font-size: 4rem;
    font-weight: 500;
    color: black;
}

h3 {
    color: black;
    font-size: 1.5rem;
    margin: 0 0 2rem;
}

/* Main Styles */

body {
    font-family: 'Lato', sans-serif; 
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.6;
    margin: 0;
    padding: 0;
    color: black;
    background: #9a9a9a;
}

li {
    list-style-type: none;
}
input {
    color: white;
	outline: none;
	border: 3px #7863AE solid;
	border-radius: 10px;
	background-color: rgba(47, 47, 51, 0.2);
	padding: 12px 100px 12px 20px;
	font-size: 25px;
	max-width: 300px;
} input::placeholder {
    color: rgba(206, 198, 197, 0.705);
}

.submitButton {
	color: whitesmoke;
	border: 3px solid #7863AE;
	border-radius: 10px;
	background-color: #7863AE;
	padding: 10px 15px;
	outline: none;
	font-size: 25px;
}

/* Video Styles */
.ytHeader {
    text-align: center;
    margin: 0;
}
.youtubeDescription {
    margin: 1;
    text-align: center;
    font-family: 'Lato', sans-serif; 
}

/* map Styles */

#map {
    height: 25%;
  }

/* Footer */

.footer .copyright {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    letter-spacing: 0.2rem;
    font-size: 8px;
    opacity: 0.75;
    text-transform: uppercase;
    color: black;
} .footer a {
    color: black;
}

/* grid */

.header     {grid-area: header;}
.footer     {grid-area: footer;}
.map        {grid-area: map;}
.videos     {grid-area: videos;}

.wrapper {
    display: grid;
    grid-template-areas: 
        "header header header"
        "videos videos map"
        "footer footer footer";
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 100vh 1fr 5%;
}

.box {
    background-color: rgb(233, 230, 230);
    color: black;
    padding: 1.3rem;
    box-shadow: 1px 1px 5px #777777;
}

.footer {
height: 8px;
background-color: rgba(47, 47, 51, 0.2);;
padding: 8px;
}

.videos, .map {
    margin: 15px 20px 10px 20px;
}

.header {
    padding: 100px;
}

/* Animations */

@keyframes showHeadLine {
    0%{transform: translateY(30%); opacity:0;}
    100%{transform: translateY(0%); opacity: 1;}
}

@keyframes showSubHeadLine {
    0%{transform: translateX(10%); opacity:0;}
    100%{transform: translateY(0%); opacity: 1;}
}

/* Responsiveness */

@media screen and (max-width: 600px) {
    .wrapper {
        grid-template-areas:
        "header"
        "map"
        "videos"
        "footer";
        grid-template-columns: 100%;
        grid-template-rows: 100vh 1fr 1fr 4px;
    }
}

@media screen and (max-width: 450px) {
    input, .submitButton {
        width: 250px;
        font-size: 20px;
    }
    .ex-btn {
        font-size: 12px;
    }
}

